# run-llama.cpp

./: pyproject.toml  run.sh
